plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.20.2'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft 'net.minecraftforge:forge:1.20.2-48.0.30'

    shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'

    shadow project(':commons')

    implementation 'uk.co.envyware:helios:1.1-SNAPSHOT'
}

shadowJar {
    configurations = [project.configurations.shadow]
    setArchivesBaseName(rootProject.name + '-Forge.jar')

    relocate('org.spongepowered.configurate', 'com.envyful.api.commons.shade.configurate')
    relocate('org.yaml.snakeyaml', 'com.envyful.api.commons.shade.snakeyaml')
    relocate('io.leangen.geantyref', 'com.envyful.api.commons.shade.geantyref')

    exclude "**/module-info.class"
}

reobf {
    shadowJar {}
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
            'FMLModType': 'GAMELIBRARY'
        ])
    }
    finalizedBy 'reobfJar'
}
